# crypto.wasm

./: .gitignore  .npmignore  CLAUDE.md  CNAME  Cargo.toml  README.md  build.ps1  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-demo.yml  release.yaml
assets/: crypto_wasm_bg-CNMP41uJ.wasm  crypto_wasm_bg-zstT4j1G.wasm  index-BA4yxoC8.js  index-BC6BIXCD.js
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: main.ts  styles.css
docs/: NPM_PACKAGE_SETUP.md  PUBLISHING.md  README.md  architecture.md  js-api.md  js-usage-browser.md  js-usage-npm.md  js-wrapper.md  output-format.md  rust-aes128.md  rust-base64.md  rust-caesar.md  rust-cli.md  rust-encryptor-trait.md  rust-overview.md  rust-rot13.md  rust-wasm-bindings.md  rust-xor.md
js/: crypto_wasm.d.ts  crypto_wasm.js  crypto_wasm.ts
src/: crypto.rs  lib.rs  main.rs
tests/: crypt_test.rs
