[package]
name = "crypto_wasm"
description = "AES-128/PKCS7 encryption on the browser"
authors = ["Guinetik <guinetik@gmail.com>"]
version = "1.0.1"
edition = "2021"
readme = "README.md"
keywords = ["rust", "crypto", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/guinetik/crypto.wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "crypto_cli"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
aes = "0.7"          # AES encryption library
block-modes = "0.8"  # Provides AES with CBC mode
rand = "0.8"         # Random number generator
hex = "0.4"          # Encoding for hex
# Specify `getrandom` with "js" feature to support WebAssembly
getrandom = { version = "0.2", features = ["js"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
clap = { version = "4.0", features = [
    "derive",
] } # Add clap for CLI argument parsing
[features]
default = []
